--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Angular Pipe that transforms a markdown string to HTML",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && npm run build && tape tests/*.js",
+    "test": "npm run build && tape tests/*.js",
     "prepare": "npm run build && npm test",
-    "build": "ngc",
-    "lint": "tslint -e src/*.d.ts  src/**/*.ts tests/**/*.ts index.ts"
+    "build": "ngc"
   },
   "files": [
     "index.js",
@@ -35,22 +34,18 @@
   },
   "homepage": "https://github.com/conclurer/markdown-to-html-pipe#readme",
   "devDependencies": {
-    "@angular/compiler": "11.1.1",
-    "@angular/compiler-cli": "11.1.1",
-    "@angular/core": "^11.1.1",
-    "@types/tape": "^4.13.0",
+    "@angular/compiler": "15.1.0",
+    "@angular/compiler-cli": "15.1.0",
+    "@angular/core": "^15.1.0",
+    "@types/tape": "^4.13.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.3",
-    "tape": "^5.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "4.1.3",
-    "zone.js": "^0.11.3"
-  },
-  "peerDependencies": {
-    "@angular/core": "^2.0.0 || ^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0"
+    "rxjs": "^7.8.0",
+    "tape": "^5.6.3",
+    "typescript": "4.9.4",
+    "zone.js": "^0.12.0"
   },
   "dependencies": {
-    "@types/marked": "^1.2.1",
-    "marked": "^1.x"
+    "@types/marked": "^4.0.8",
+    "marked": "^4.2.12"
   }
 }
